--- a/res/layout/chat_msg_item_layout.xml
+++ b/res/layout/chat_msg_item_layout.xml
@@ -69,6 +69,8 @@
             android:layout_marginBottom="4dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:alpha="0.5"
             android:text="房东是贱人，你怎么看？"
             android:textSize="12dp" />
