--- a/res/layout/contacts_info_header_layout.xml
+++ b/res/layout/contacts_info_header_layout.xml
@@ -45,10 +45,10 @@
             android:id="@+id/contacts_info_friends_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="0.6"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:alpha="0.6"
             android:text="来自 楠楠 等3位好友的通信录"
             android:textSize="14dp" />
 
@@ -157,5 +157,13 @@
                 android:src="@drawable/ic_female_selected" />
         </LinearLayout>
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/contacts_info_head_02"
+        android:alpha="0.5"
+        android:background="@color/darkgray" >
+    </ImageView>
 
 </RelativeLayout>
