fix the bug: optimize the ui 1:register 2:login 3:forget password

--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#1abc9c" >
 
     <ImageView
         android:id="@+id/login_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_edit_unselected" />
+        android:layout_marginTop="40dp"
+        android:src="@drawable/ic_actionbar_logo" />
 
     <TextView
         android:id="@+id/login_description"
@@ -19,7 +21,8 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:padding="4dp"
-        android:text="基于好友通讯录的交友应用"
+        android:text="认识好朋友的朋友"
+        android:textColor="@color/white"
         android:textSize="20dp" />
 
     <EditText
@@ -27,9 +30,10 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_description"
+        android:background="@drawable/register_login_edit_selector"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="25dp"
         android:hint="手机号码"
         android:inputType="phone"
         android:minWidth="200dp"
@@ -41,10 +45,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_phone_num"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/register_login_edit_selector"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:inputType="textPassword"
         android:hint="输入密码"
+        android:inputType="textPassword"
         android:minWidth="200dp"
         android:textSize="14dp" />
 
@@ -56,35 +61,36 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/contacts_info_btn_selector"
+        android:background="@drawable/register_login_button_selector"
         android:clickable="true"
         android:padding="5dp"
         android:text="登录"
-        android:textColor="@color/gray"
+        android:textColor="@color/white"
         android:textSize="16dp" />
 
     <RelativeLayout
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login_btn"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="40dp" >
+        android:layout_marginBottom="40dp" >
 
         <TextView
             android:id="@+id/forget_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="忘记密码？"
-            android:textSize="18dp" />
+            android:text="忘记密码"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/return_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="返回"
-            android:textSize="18dp" />
+            android:text="新用户注册"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
     </RelativeLayout>
 
 </RelativeLayout>
