--- a/res/layout/change_password_layout.xml
+++ b/res/layout/change_password_layout.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#1abc9c" >
 
     <RelativeLayout
         android:id="@+id/change_password_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="95px"
-        android:background="#991abc9c" >
+        android:layout_height="95px" >
 
         <RelativeLayout
             android:id="@+id/change_password_return"
@@ -44,6 +44,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/change_password_toolbar"
+        android:background="@drawable/register_login_edit_selector"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="45dp"
@@ -65,6 +66,7 @@
             android:id="@+id/change_password_input_verify_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/register_login_edit_selector"
             android:hint="输入验证码"
             android:minWidth="80dp"
             android:textSize="14dp" />
@@ -76,11 +78,11 @@
             android:layout_centerInParent="true"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/change_password_input_verify_code"
-            android:background="@drawable/contacts_info_btn_selector"
+            android:background="@drawable/register_login_button_selector"
             android:clickable="true"
             android:padding="5dp"
             android:text="获取验证码"
-            android:textColor="@color/gray"
+            android:textColor="@color/white"
             android:textSize="16dp" />
     </RelativeLayout>
 
@@ -89,6 +91,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/change_password_verify_code"
+        android:background="@drawable/register_login_edit_selector"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
@@ -104,11 +107,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/contacts_info_btn_selector"
+        android:background="@drawable/register_login_button_selector"
         android:clickable="true"
         android:padding="5dp"
         android:text="确定"
-        android:textColor="@color/gray"
+        android:textColor="@color/white"
         android:textSize="16dp" />
 
 </RelativeLayout>
