fix the bug: optimize the UI, 1:actionbar and head pic

--- a/res/layout/change_password_layout.xml
+++ b/res/layout/change_password_layout.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/change_password_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="95px" >
+        android:layout_height="48dp" >
 
         <RelativeLayout
             android:id="@+id/change_password_return"
