--- a/res/layout/choose_header_bkg_layout.xml
+++ b/res/layout/choose_header_bkg_layout.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/choose_background_head_bar"
         android:layout_width="match_parent"
-        android:layout_height="85px" >
+        android:layout_height="48dp" >
 
         <RelativeLayout
             android:id="@+id/choose_background_return"
