--- a/res/layout/edit_info_comments_layout.xml
+++ b/res/layout/edit_info_comments_layout.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/edit_info_comments_head"
         android:layout_width="match_parent"
-        android:layout_height="115px" >
+        android:layout_height="58dp" >
 
         <RelativeLayout
             android:id="@+id/edit_info_comment_return"
@@ -27,14 +27,14 @@
 
             <com.dhn.marrysocial.roundedimageview.RoundedImageView
                 android:id="@+id/edit_info_comments_person_pic"
-                android:layout_width="102px"
-                android:layout_height="102px"
+                android:layout_width="51dp"
+                android:layout_height="51dp"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/edit_info_comment_arrow"
                 android:scaleType="centerCrop"
                 android:src="@drawable/head"
                 app:border_width="0dp"
-                app:corner_radius="50dp"
+                app:corner_radius="51dp"
                 app:oval="false" />
 
             <TextView
