--- a/res/layout/invite_friends_layout.xml
+++ b/res/layout/invite_friends_layout.xml
@@ -6,8 +6,8 @@
     <RelativeLayout
         android:id="@+id/invite_friends_toolbar"
         android:layout_width="wrap_content"
-        android:layout_height="95px"
-        android:background="#991abc9c" >
+        android:layout_height="48dp"
+        android:background="#1abc9c" >
 
         <RelativeLayout
             android:id="@+id/invite_friends_return"
