--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -6,8 +6,8 @@
     <RelativeLayout
         android:id="@+id/settings_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="95px"
-        android:background="#991abc9c" >
+        android:layout_height="48dp"
+        android:background="#1abc9c" >
 
         <RelativeLayout
             android:id="@+id/settings_return"
