fix the bug: optimize the ui

--- a/res/layout/contacts_list_item_layout.xml
+++ b/res/layout/contacts_list_item_layout.xml
@@ -26,6 +26,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="18dp"
+        android:visibility="gone"
         android:button="@null"
         android:background="@drawable/contacts_radiobtn_selector" />
 
