--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -13,7 +13,7 @@
             android:id="@+id/settings_return"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/gray_bkg_selector"
+            android:background="@drawable/default_bkg_selector"
             android:clickable="true" >
 
             <ImageView
@@ -42,6 +42,7 @@
         android:id="@+id/barcode_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/settings_toolbar" >
 
         <ImageView
