--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="copyright_color">#ff999999</color>
     <color name="click_color">#ff6c88ae</color>
 
-    <color name="main_color">#ff1abc9a</color>
+    <color name="main_color">#16a085</color>
     <color name="gray_background_color">#11666666</color>
 
 </resources>
