--- a/res/layout/about_us_layout.xml
+++ b/res/layout/about_us_layout.xml
@@ -12,8 +12,8 @@
         <RelativeLayout
             android:id="@+id/about_us_return"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/gray_bkg_selector"
+            android:layout_height="match_parent"
+            android:background="@drawable/default_bkg_selector"
             android:clickable="true" >
 
             <ImageView
