--- a/res/layout/edit_info_comments_layout.xml
+++ b/res/layout/edit_info_comments_layout.xml
@@ -54,7 +54,7 @@
     <RelativeLayout
         android:id="@+id/edit_info_comments_foot"
         android:layout_width="match_parent"
-        android:layout_height="95px"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:background="@color/gray_background_color" >
 
