--- a/res/layout/chat_msg_item_layout.xml
+++ b/res/layout/chat_msg_item_layout.xml
@@ -60,7 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.8"
-            android:text="楠楠" />
+            android:text="楠楠"
+            android:textColor="#1abc9c" />
 
         <TextView
             android:id="@+id/chat_msg_description"
