--- a/res/layout/chat_msg_layout.xml
+++ b/res/layout/chat_msg_layout.xml
@@ -36,19 +36,25 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="楠楠"
-                android:textSize="16dp"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="16dp" />
         </RelativeLayout>
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/chat_msg_foot"
         android:layout_width="match_parent"
-        android:layout_height="95px"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/base_action_bar_bg" >
+        android:background="@drawable/base_action_bar_bg"
+        android:focusable="true"
+        android:focusableInTouchMode="true" >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:alpha="0.6"
+            android:background="@color/lightgray" />
 
         <ImageView
             android:id="@+id/chat_msg_chat_send"
@@ -66,13 +72,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_marginRight="48dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="6dp"
             android:layout_toLeftOf="@id/chat_msg_chat_send"
-            android:background="@drawable/gray_bkg_selector"
-            android:hint="让世界聆听你的心跳..."
-            android:paddingBottom="2dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="2dp" />
+            android:background="@drawable/register_login_edit_selector"
+            android:textSize="15sp"
+            android:textColor="@color/gray"
+            android:hint="让世界聆听你的心跳..." />
     </RelativeLayout>
 
     <ListView
@@ -81,10 +89,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/chat_msg_foot"
         android:layout_below="@id/chat_msg_head"
-        android:listSelector="@android:color/transparent"
         android:cacheColorHint="#0000"
         android:divider="@null"
         android:dividerHeight="5dp"
+        android:listSelector="@android:color/transparent"
         android:scrollbarStyle="outsideOverlay"
         android:stackFromBottom="true" >
     </ListView>
