--- a/res/layout/dynamic_info_fragment_layout.xml
+++ b/res/layout/dynamic_info_fragment_layout.xml
@@ -40,6 +40,12 @@
         android:visibility="gone" >
 
         <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:alpha="0.6"
+            android:background="@color/lightgray" />
+
+        <ImageView
             android:id="@+id/dynamic_info_reply_send"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -52,15 +58,18 @@
 
         <EditText
             android:id="@+id/dynamic_info_reply_contents"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="6dp"
             android:layout_toLeftOf="@id/dynamic_info_reply_send"
-            android:background="@drawable/gray_bkg_selector"
+            android:background="@drawable/register_login_edit_selector"
             android:hint="让世界聆听你的心跳..."
-            android:paddingBottom="2dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="2dp" />
+            android:textColor="@color/gray"
+            android:textSize="15sp" />
     </RelativeLayout>
 
 </RelativeLayout>
