--- a/res/layout/edit_info_comments_layout.xml
+++ b/res/layout/edit_info_comments_layout.xml
@@ -47,7 +47,8 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="楠楠"
-                android:textSize="16dp" />
+                android:textSize="16sp"
+                android:textColor="#1abc9c" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -104,7 +105,8 @@
             android:background="@color/transparent"
             android:hint="说点什么，让世界听到你的心跳..."
             android:minHeight="20dp"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:textColor="@color/gray" />
 
         <GridView
             android:id="@+id/edit_info_comments_add_pics"
