--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:src="@drawable/ic_logo_big" />
+        android:src="@drawable/ic_logo_middle" />
 
     <TextView
         android:id="@+id/login_description"
