--- a/res/layout/reply_list_item_layout.xml
+++ b/res/layout/reply_list_item_layout.xml
@@ -43,7 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.8"
-            android:text="楠楠" />
+            android:text="楠楠"
+            android:textColor="#1abc9c" />
 
         <TextView
             android:id="@+id/reply_list_content"
