--- a/res/layout/reply_list_layout.xml
+++ b/res/layout/reply_list_layout.xml
@@ -48,7 +48,8 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="楠楠"
-                android:textSize="16dp" />
+                android:textSize="16sp"
+                android:textColor="#1abc9c" />
         </RelativeLayout>
     </RelativeLayout>
 
