--- a/res/layout/chat_msg_item_from_left_layout.xml
+++ b/res/layout/chat_msg_item_from_left_layout.xml
@@ -26,7 +26,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp" >
 
         <com.dhn.marrysocial.roundedimageview.RoundedImageView
