--- a/res/layout/chat_msg_item_to_right_layout.xml
+++ b/res/layout/chat_msg_item_to_right_layout.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="10dp" >
 
         <com.dhn.marrysocial.roundedimageview.RoundedImageView
