--- a/res/layout/contacts_list_item_layout.xml
+++ b/res/layout/contacts_list_item_layout.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
-    android:background="@drawable/default_bkg_selector" >
+    android:background="@drawable/gray_bkg_selector" >
 
     <com.dhn.marrysocial.roundedimageview.RoundedImageView
         android:id="@+id/contacts_person_pic"
-        android:layout_width="102px"
-        android:layout_height="102px"
+        android:layout_width="51dp"
+        android:layout_height="51dp"
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:scaleType="centerCrop"
         android:src="@drawable/person_default_small_pic"
         app:border_width="0dp"
-        app:corner_radius="50dp"
+        app:corner_radius="51dp"
         app:oval="false" />
 
     <CheckBox
