--- a/res/layout/edit_info_comments_layout.xml
+++ b/res/layout/edit_info_comments_layout.xml
@@ -7,13 +7,14 @@
     <RelativeLayout
         android:id="@+id/edit_info_comments_head"
         android:layout_width="match_parent"
-        android:layout_height="58dp" >
+        android:layout_height="58dp"
+        android:background="#1abc9c" >
 
         <RelativeLayout
             android:id="@+id/edit_info_comment_return"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/gray_bkg_selector"
+            android:background="@drawable/default_bkg_selector"
             android:clickable="true" >
 
             <ImageView
@@ -47,8 +48,8 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="楠楠"
-                android:textSize="16sp"
-                android:textColor="#1abc9c" />
+                android:textColor="@color/white"
+                android:textSize="16sp" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -113,13 +114,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/edit_info_comments_description"
-            android:padding="20dp"
             android:columnWidth="98dp"
             android:horizontalSpacing="5dp"
+            android:listSelector="#00000000"
             android:numColumns="auto_fit"
+            android:padding="20dp"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp"
-            android:listSelector="#00000000" >
+            android:verticalSpacing="10dp" >
         </GridView>
     </RelativeLayout>
 
