--- a/res/layout/fill_userinfo_layout.xml
+++ b/res/layout/fill_userinfo_layout.xml
@@ -20,12 +20,14 @@
 
     <TextView
         android:id="@+id/userinfo_description"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/userinfo_logo_headbar"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="为了帮您找到尽可能多的朋友的好友，请认真填写如下信息（信息暂不支持修改）"
         android:textSize="16dp" />
 
@@ -36,7 +38,7 @@
         android:layout_below="@id/userinfo_description"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp" >
+        android:layout_marginTop="15dp" >
 
         <RelativeLayout
             android:id="@+id/userinfo_header_name"
@@ -50,7 +52,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/edit_info_comment_arrow"
                 android:scaleType="centerCrop"
-                android:src="@drawable/head"
+                android:background="@drawable/person_default_big_pic"
                 app:border_width="0dp"
                 app:corner_radius="93dp"
                 app:oval="false" />
@@ -60,8 +62,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:visibility="gone"
                 android:text="头像"
-                android:textSize="20dp" />
+                android:textSize="16sp"
+                android:textColor="@color/gray" />
         </RelativeLayout>
 
         <EditText
@@ -71,8 +75,9 @@
             android:layout_centerInParent="true"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/userinfo_header_name"
+            android:background="@drawable/register_login_edit_selector"
             android:hint="姓名"
-            android:textSize="14dp" />
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <EditText
@@ -80,12 +85,13 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/userinfo_header_name_group"
+        android:background="@drawable/register_login_edit_selector"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:hint="个性签名"
         android:minWidth="200dp"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
 
     <RelativeLayout
         android:id="@+id/userinfo_gender_group"
@@ -94,15 +100,17 @@
         android:layout_below="@id/userinfo_signature"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp" >
+        android:layout_marginTop="25dp" >
 
         <TextView
             android:id="@+id/userinfo_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
             android:text="性别"
-            android:textSize="18dp" />
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -152,7 +160,7 @@
         android:layout_below="@id/userinfo_gender_group"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp" >
+        android:layout_marginTop="15dp" >
 
         <TextView
             android:id="@+id/userinfo_astro"
@@ -160,7 +168,9 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="星座"
-            android:textSize="18dp" />
+            android:paddingLeft="10dp"
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -185,7 +195,7 @@
         android:layout_below="@id/userinfo_astro_group"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp" >
+        android:layout_marginTop="15dp" >
 
         <TextView
             android:id="@+id/userinfo_hobby"
@@ -193,7 +203,9 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="爱好"
-            android:textSize="18dp" />
+            android:paddingLeft="10dp"
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -240,15 +252,15 @@
         android:id="@+id/userinfo_invite_friends"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/userinfo_hobby_group"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/contacts_info_btn_selector"
         android:clickable="true"
         android:padding="5dp"
         android:text="立即邀请好友"
-        android:textColor="@color/gray"
+        android:textColor="@color/white"
         android:textSize="16dp" />
 
 </RelativeLayout>
