--- a/res/layout/astro_item_layout.xml
+++ b/res/layout/astro_item_layout.xml
@@ -11,14 +11,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_aries_baiyang_green" />
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_aries_baiyang_gray" />
 
     <TextView
         android:id="@+id/astro_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="白羊座" />
+        android:text="白羊座"
+        android:textColor="@color/white" />
 
 </LinearLayout>
