--- a/res/layout/astro_layout.xml
+++ b/res/layout/astro_layout.xml
@@ -3,7 +3,7 @@
     android:id="@+id/astro_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/dialog_trans_bkg"
     android:horizontalSpacing="5dp"
     android:numColumns="3"
     android:stretchMode="columnWidth"
