--- a/res/layout/dialog_exit_app_layout.xml
+++ b/res/layout/dialog_exit_app_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
-    android:background="#1abc9c" >
+    android:background="@drawable/dialog_trans_bkg" >
 
     <TextView
         android:id="@+id/exit_app_desc"
