--- a/res/layout/chat_msg_item_from_left_layout.xml
+++ b/res/layout/chat_msg_item_from_left_layout.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
@@ -25,16 +26,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="35dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp" >
+        android:layout_marginRight="35dp" >
 
         <com.dhn.marrysocial.roundedimageview.RoundedImageView
             android:id="@+id/chat_msg_person_pic"
             android:layout_width="51dp"
             android:layout_height="51dp"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"
             android:src="@drawable/head"
             app:border_width="0dp"
