--- a/res/layout/chat_msg_item_to_right_layout.xml
+++ b/res/layout/chat_msg_item_to_right_layout.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="10dp" >
+        android:layout_marginBottom="8dp" >
 
         <com.dhn.marrysocial.roundedimageview.RoundedImageView
             android:id="@+id/chat_msg_person_pic"
