--- a/res/layout/choose_header_bkg_layout.xml
+++ b/res/layout/choose_header_bkg_layout.xml
@@ -7,13 +7,14 @@
     <RelativeLayout
         android:id="@+id/choose_background_head_bar"
         android:layout_width="match_parent"
-        android:layout_height="48dp" >
+        android:layout_height="48dp"
+        android:background="#1abc9c" >
 
         <RelativeLayout
             android:id="@+id/choose_background_return"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/gray_bkg_selector"
+            android:background="@drawable/default_bkg_selector"
             android:clickable="true" >
 
             <ImageView
@@ -35,7 +36,8 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="更换相处封面"
-                android:textSize="16dp" />
+                android:textSize="16sp"
+                android:textColor="@color/white" />
         </RelativeLayout>
     </RelativeLayout>
 
