--- a/res/layout/dynamic_info_fragment_layout.xml
+++ b/res/layout/dynamic_info_fragment_layout.xml
@@ -3,12 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.dhn.marrysocial.view.RefreshListView
+    <!--
+         <com.dhn.marrysocial.view.RefreshListView
         android:id="@+id/dynamic_info_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:listSelector="#00000000" >
     </com.dhn.marrysocial.view.RefreshListView>
+    -->
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/dynamic_info_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ListView
+            android:id="@+id/dynamic_info_listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:listSelector="#00000000" >
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/dynamic_info_list_empty"
