fix the bug:1:documentUI

--- a/res/layout/register_layout.xml
+++ b/res/layout/register_layout.xml
@@ -115,6 +115,7 @@
             android:clickable="true"
             android:gravity="center_horizontal"
             android:text="登录"
+            android:padding="5dp"
             android:textColor="@color/white"
             android:textSize="16dp" />
     </RelativeLayout>
