--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -80,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="忘记密码"
+            android:padding="5dp"
             android:textColor="@color/white"
             android:textSize="16dp" />
 
@@ -89,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="新用户注册"
+            android:padding="5dp"
             android:textColor="@color/white"
             android:textSize="16dp" />
     </RelativeLayout>
